audio and image changes

--- a/test.html
+++ b/test.html
@@ -454,8 +454,14 @@
       playsinline
       style="display: none"
     >
-      <source src="BackgroundMusic.m4a" type="audio/mp4" />
-      <source src="BackgroundMusic.mp3" type="audio/mpeg" />
+      <source
+        src="https://sibgatul-hassen.github.io/wish/BackgroundMusic.m4a"
+        type="audio/mp4"
+      />
+      <source
+        src="https://sibgatul-hassen.github.io/wish/BackgroundMusic.mp3"
+        type="audio/mpeg"
+      />
     </audio>
 
     <script>
@@ -507,30 +513,22 @@
       <div class="photo-gallery">
         <div class="photo-frame">
           <img
-            src="Anniversary (1).jpg"
-            alt="Happy couple"
-            onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';"
+            src="https://sibgatul-hassen.github.io/wish/Anniversary%20(1).jpg"
           />
         </div>
         <div class="photo-frame">
           <img
-            src="Anniversary (2).jpg"
-            alt="Wedding rings"
-            onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';"
+            src="https://sibgatul-hassen.github.io/wish/Anniversary%20(2).jpg"
           />
         </div>
         <div class="photo-frame">
           <img
-            src="Anniversary (3).jpg"
-            alt="Wedding celebration"
-            onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';"
+            src="https://sibgatul-hassen.github.io/wish/Anniversary%20(3).jpg"
           />
         </div>
         <div class="photo-frame">
           <img
-            src="Anniversary (4).jpg"
-            alt="Love celebration"
-            onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';"
+            src="https://sibgatul-hassen.github.io/wish/Anniversary%20(4).jpg"
           />
         </div>
       </div>
